service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-tracker-service
spec:
  type: NodePort
  selector:
    app: task-tracker-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30080
