deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-tracker-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-tracker-frontend
  template:
    metadata:
      labels:
        app: task-tracker-frontend
    spec:
      containers:
      - name: frontend
        image: ahsanulhabib1993/task-tracker-frontend:latest
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-tracker-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-tracker-backend
  template:
    metadata:
      labels:
        app: task-tracker-backend
    spec:
      containers:
      - name: backend
        image: ahsanulhabib1993/task-tracker-backend:latest
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: task-tracker-frontend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: task-tracker-frontend
---
apiVersion: v1
kind: Service
metadata:
  name: task-tracker-backend
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: task-tracker-backend
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-tracker-ingress
spec:
  rules:
    - host: task-tracker.local
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: task-tracker-frontend
              port:
                number: 80
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: task-tracker-backend
              port:
                number: 3001
